Bug 394505. Crash [@ nsCaret::GetCaretCoordinates] with designMode iframe and changing display. r=evan.yan, a=dsicore